--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,12 +15,12 @@ init:
   - set PATH=C:/ruby21/bin;%BASE_PATH%
   - ruby -v
   - gem -v
-  - gem install rake -v '>= 20.0'
+#  - gem install rake -v '>= 20.0'
 
   - set PATH=C:/ruby21-x64/bin;%BASE_PATH%
   - ruby -v
   - gem -v
-  - gem install rake -v '>= 20.0'
+#  - gem install rake -v '>= 20.0'
   
   - set PATH=C:/ruby22/bin;%BASE_PATH%
   - ruby -v
