--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ init:
   - mklink /d C:\git "C:\Program Files\Git"
   - set BASE_PATH=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/msys64/usr/bin;C:/Windows/system32;C:\Windows;
 
+build:
   - set PATH=C:/ruby200/bin;%BASE_PATH%
   - ruby -v
   - gem -v
@@ -47,5 +48,4 @@ init:
   - gem -v
   - gem install rake -v '>= 20.0'
 
-build: off
 deploy: off
