--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,9 @@ install:
 #  - ps: gem install rake -v ">= 20.0" && exit 0
   
   - set PATH=C:/ruby21/bin;%BASE_PATH%
-  - ps: |
-    ruby -v
+  - ruby -v
     gem -v
-    gem install rake -v ">= 20.0"
-    exit 0
+    ps: gem install rake -v ">= 20.0" && exit 0
 
   - set PATH=C:/ruby21-x64/bin;%BASE_PATH%
   - ruby -v
