--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,46 +7,53 @@ init:
 
 install:
   - set PATH=C:/ruby200/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
     gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby200-x64/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
     gem install rake -v ">= 20.0" & exit 0
   
   - set PATH=C:/ruby21/bin;%BASE_PATH%
-  - @ruby -v
+  - ruby -v
     @gem -v
     gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby21-x64/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
   
   - set PATH=C:/ruby22/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby22-x64/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby23/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby23-x64/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
 
   - set PATH=C:/ruby24-x64/bin;%BASE_PATH%
-  - @ruby -v
-  - @gem -v
+  - ruby -v
+  - gem -v
+  - gem install rake -v ">= 20.0" & exit 0
+
+  - appveyor DownloadFile https://dl.bintray.com/msp-greg/ruby_windows/ruby_trunk.7z -FileName C:\ruby_trunk.7z &
+      7z x C:\ruby_trunk.7z -oC:\ruby_trunk & C:\ruby_trunk\trunk_install.cmd )
+  - set PATH=C:/ruby_trunk/bin;%BASE_PATH%
+  - ruby -v
+  - gem -v
   - gem install rake -v ">= 20.0" & exit 0
