--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,9 @@ test_script:
   - set base_path=C:/msys64/usr/bin;C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows;C:/Program Files
 
   # Download and install latest ruby trunk build
-  - appveyor DownloadFile https://ci.appveyor.com/project/MSP-Greg/ruby-loco//artifacts/master/latest_successful/ruby_trunk.7z -FileName C:\ruby_trunk.7z
-  - 7z x C:/ruby_trunk.7z -oC:/ruby_trunk
+  - md C:\pkgs
+  - appveyor DownloadFile https://ci.appveyor.com/project/MSP-Greg/ruby-loco//artifacts/master/latest_successful/ruby_trunk.7z -FileName C:/pkgs/ruby_trunk.7z
+  - 7z x C:/pkgs/ruby_trunk.7z -oC:/ruby_trunk
   
   # Download ruby so tests can be run
   - git clone -q --depth=5 --no-tags --branch=trunk https://github.com/ruby/ruby.git  C:\ruby_src
