--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,17 @@
 build: off
 deploy: off
+init:
+  # To avoid duplicated executables in PATH, see https://github.com/ruby/spec/pull/468
+  - set PATH=C:\ruby%RUBY_VERSION%\bin;C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
+  # Loads trunk build and updates MSYS2 / MinGW to most recent gcc compiler
+  - if %ruby_version%==_trunk (
+      appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:\ruby_trunk.7z &
+      7z x C:\ruby_trunk.7z -oC:\ruby_trunk & C:\ruby_trunk\trunk_msys2.cmd)
 
 test_script:
-  - set base_path=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Program Files/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows
-  - set PATH=C:/ruby24-x64/bin;%base_path%
   - ruby test.rb
+
+environment:
+  matrix:
+    # add other versions
+    - RUBY_VERSION: _trunk
