--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,11 @@ build: off
 deploy: off
 init:
   # To avoid duplicated executables in PATH, see https://github.com/ruby/spec/pull/468
-  - set PATH=C:\ruby%RUBY_VERSION%\bin;C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
+  - set PATH=C:\msys64\usr\bin;C:\ruby%RUBY_VERSION%\bin;C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
+  - pacman -Syuu --noconfirm
+  - echo %ERRORLEVEL%
+  - pacman -Suu --noconfirm
+
   # Loads trunk build and updates MSYS2 / MinGW to most recent gcc compiler
   - if %ruby_version%==_trunk (
       appveyor DownloadFile %APPVEYOR_URL%/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:\ruby_trunk.7z &
@@ -10,7 +14,6 @@ init:
 
 test_script:
   - ruby test.rb
-  - C:/msys64/usr/bin/wget.exe --help
 
 environment:
   matrix:
