--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,22 @@
 build: off
 deploy: off
-init:
-  # To avoid duplicated executables in PATH, see https://github.com/ruby/spec/pull/468
-  - set PATH=C:\ruby193\bin;C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
 
 test_script:
-  - ruby -Eutf-8:utf-8 appveyor_info.rb
+  - set base_path=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Program Files/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows
+
+  - appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:/ruby_trunk.7z
+  - 7z x C:/ruby_trunk.7z -oC:/ruby_trunk
+
+  - echo off
+  - set PATH=C:/ruby200/bin;%base_path%     & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby200-x64/bin;%base_path% & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby21/bin;%base_path%      & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby21-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby22/bin;%base_path%      & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby22-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby23/bin;%base_path%      & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby23-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby24-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+  - set PATH=C:/ruby_trunk/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+
+  appveyor UpdateBuild -Message "DevKit Path"
