--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,21 +2,20 @@ build: off
 deploy: off
 
 test_script:
-  - set base_path=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Program Files/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows
+  - set BASE_PATH=C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
+  - PATH=%BASE_PATH%;C:\msys64\usr\bin
+  - gpg.exe  --keyserver na.pool.sks-keyservers.net --recv-keys BE8BF1C5
 
-  - appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:/ruby_trunk.7z
-  - 7z x C:/ruby_trunk.7z -oC:/ruby_trunk
+  # RUBY_OTHER is used to test CLI commands
+  - set RUBY_OTHER=C:\ruby23-x64
+  - set RI2_VERS=rubyinstaller-2.4.2-2
+  - set RUBY_VERS_BASE=rubyinstaller-2.4.2-2
 
-  - echo off
-  - set PATH=C:/ruby200/bin;%base_path%     & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby200-x64/bin;%base_path% & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby21/bin;%base_path%      & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby21-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby22/bin;%base_path%      & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby22-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby23/bin;%base_path%      & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby23-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby24-x64/bin;%base_path%  & ruby -rdevkit devkit_path.rb
-  - set PATH=C:/ruby_trunk/bin;%base_path%  & ruby -rdevkit devkit_path.rb
+  - set RBIT=x86
+  - set RDIR=ruby24
+  - call new_ruby.cmd
 
-  - appveyor UpdateBuild -Message "DevKit Path"
+  - PATH=%BASE_PATH%;C:\msys64\usr\bin
+  - set RBIT=x64
+  - set RDIR=ruby24-x64
+  - call new_ruby.cmd
