--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,31 @@
-build: off
+build:  off
 deploy: off
 
 test_script:
-  - set BASE_PATH=C:\Program Files\7-Zip;C:\Program Files\AppVeyor\BuildAgent;C:\Program Files\Git\cmd;C:\Windows\system32;C:\Program Files;C:\Windows
-  - PATH=%BASE_PATH%;C:\msys64\usr\bin
-  - gpg.exe  --keyserver na.pool.sks-keyservers.net --recv-keys BE8BF1C5
+  # Remove any ENV settings related to OpenSSL-Win
+  - set SSL_CERT_DIR=
+  - set SSL_CERT_FILE=
+  - set OPENSSL_CONF=
+  - set OPENSSL_DIR=
 
-  # RUBY_OTHER is used to test CLI commands
-  - set RUBY_OTHER=C:\ruby23-x64
-  - set RI2_VERS=rubyinstaller-2.4.2-2
-  - set RUBY_VERS_BASE=rubyinstaller-2.4.2-2
+  # Set up minimum path required
+  - mklink /d C:\git "C:\Program Files\Git"
+  - set base_path=C:/msys64/usr/bin;C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows;C:/Program Files
 
-  - set RBIT=x86
-  - set RDIR=ruby24
-  - call new_ruby.cmd
-
-  - PATH=%BASE_PATH%;C:\msys64\usr\bin
-  - set RBIT=x64
-  - set RDIR=ruby24-x64
-  - call new_ruby.cmd
+  # Download and install latest ruby trunk build
+  - md C:\pkgs
+  - appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:/pkgs/ruby_trunk.7z
+  - 7z x C:/pkgs/ruby_trunk.7z -oC:/ruby_trunk
+  
+  # Download ruby so tests can be run
+  - git clone -q --depth=5 --no-tags --branch=trunk https://github.com/ruby/ruby.git  C:\ruby_src
+  
+  - set PATH=C:/ruby_trunk/bin;%base_path%
+  
+  - cd C:\ruby_src\test
+  - rem ——————————————————————————————————————————————————————————————————————————————— 
+  - ruby -ropenssl -e 'puts "OPENSSL_VERSION          " + OpenSSL::OPENSSL_VERSION + "\nOPENSSL_LIBRARY_VERSION  " + OpenSSL::OPENSSL_LIBRARY_VERSION'
+  - rem ——————————————————————————————————————————————————————— trunk openssl test no j
+  - ruby -v --disable-gems runner.rb -v -I./lib openssl
+  - rem ——————————————————————————————————————————————————————— trunk openssl test -j2
+  - ruby -v --disable-gems runner.rb -v -I./lib --show-skip -j2 --job-status=normal openssl
