--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,5 +2,9 @@ build: off
 deploy: off
 
 test_script:
+  - where ragel.exe
+  - C:\msys64\usr\bin\pacman.exe --noconfirm -S mingw-w64-i686-ragel
+  - C:\msys64\usr\bin\pacman.exe --noconfirm -S mingw-w64-x86_64-ragel
+  - where ragel.exe
   - dir C:\msys64\mingw32\bin\*.exe
   - dir C:\msys64\mingw64\bin\*.exe
