--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,20 +1,39 @@
 build: off
 deploy: off
 
-install:
-  - set dl_sf=https://sourceforge.net/projects/msys2/files/REPOS/MINGW/
-  - set ragel=ragel-6.10-1-any.pkg.tar.xz
-  - md av_bundle\pkgs
-
-  - appveyor DownloadFile %dl_sf%/x86_64/mingw-w64-x86_64-%ragel%     -FileName av_bundle\pkgs\mingw-w64-x86_64-%ragel%
-  - appveyor DownloadFile %dl_sf%/x86_64/mingw-w64-x86_64-%ragel%.sig -FileName av_bundle\pkgs\mingw-w64-x86_64-%ragel%.sig
-
-  - appveyor DownloadFile %dl_sf%/i686/mingw-w64-i686-%ragel%     -FileName av_bundle\pkgs\mingw-w64-i686-%ragel%
-  - appveyor DownloadFile %dl_sf%/i686/mingw-w64-i686-%ragel%.sig -FileName av_bundle\pkgs\mingw-w64-i686-%ragel%.sig
-
-  - C:\msys64\usr\bin\pacman -Udd --noconfirm --force  av_bundle/pkgs/mingw-w64-x86_64-%ragel% > nul
-  - C:\msys64\usr\bin\pacman -Udd --noconfirm --force  av_bundle/pkgs/mingw-w64-i686-%ragel%   > nul
-
 test_script:
-  - dir C:\msys64\mingw32\bin\*.exe
-  - dir C:\msys64\mingw64\bin\*.exe
+- set base_path=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Program Files/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows
+
+- appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:/ruby_trunk.7z
+- 7z x C:/ruby_trunk.7z -oC:/ruby_trunk
+
+- echo off
+- set PATH=C:/ruby200-x64/bin;%base_path%
+- ps: >-
+    if ((gem query -i bundler -v 1.16.2) -eq $False) {
+      gem uninstall bundler
+      gem install bundler --no-document
+    }
+
+- set PATH=C:/ruby21-x64/bin;%base_path%
+- ps: >-
+    if ((gem query -i bundler -v 1.16.2) -eq $False) {
+      gem uninstall bundler
+      gem install bundler --no-document
+    }
+
+
+- set PATH=C:/ruby22-x64/bin;%base_path%
+- ps: >-
+    if ((gem query -i bundler -v 1.16.2) -eq $False) {
+      gem uninstall bundler
+      gem install bundler --no-document
+    }
+
+
+- set PATH=C:/ruby23-x64/bin;%base_path%
+- ps: >-
+    if ((gem query -i bundler -v 1.16.2) -eq $False) {
+      gem uninstall bundler
+      gem install bundler --no-document
+    }
