--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,14 +11,14 @@ test_script:
 - set PATH=C:/ruby200-x64/bin;%base_path%
 - ps: >-
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
-      gem uninstall bundler
+      gem uninstall bundler -x
       gem install bundler --no-document
     }
 
 - set PATH=C:/ruby21-x64/bin;%base_path%
 - ps: >-
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
-      gem uninstall bundler
+      gem uninstall bundler -x
       gem install bundler --no-document
     }
 
@@ -26,7 +26,7 @@ test_script:
 - set PATH=C:/ruby22-x64/bin;%base_path%
 - ps: >-
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
-      gem uninstall bundler
+      gem uninstall bundler -x
       gem install bundler --no-document
     }
 
@@ -34,6 +34,6 @@ test_script:
 - set PATH=C:/ruby23-x64/bin;%base_path%
 - ps: >-
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
-      gem uninstall bundler
+      gem uninstall bundler -x
       gem install bundler --no-document
     }
