--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ test_script:
 - ps: >-
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
       gem uninstall bundler -x
-      gem install bundler --no-document
+      gem install bundler --user-install --no-document
     }
 
 - set PATH=C:/ruby21-x64/bin;%base_path%
