--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ test_script:
 - echo off
 - set PATH=C:/ruby200-x64/bin;%base_path%
 - ps: >-
-    gem update --system ;
+    gem install rubygems-update ; update_rubygems ;
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
       gem uninstall bundler -x
       gem install bundler -N
@@ -18,7 +18,7 @@ test_script:
 
 - set PATH=C:/ruby21-x64/bin;%base_path%
 - ps: >-
-    gem update --system ;
+    gem install rubygems-update ; update_rubygems ;
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
       gem uninstall bundler -x
       gem install bundler -N
@@ -27,7 +27,7 @@ test_script:
 
 - set PATH=C:/ruby22-x64/bin;%base_path%
 - ps: >-
-    gem update --system
+    gem install rubygems-update ; update_rubygems ;
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
       gem uninstall bundler -x
       gem install bundler --no-document
@@ -36,7 +36,7 @@ test_script:
 
 - set PATH=C:/ruby23-x64/bin;%base_path%
 - ps: >-
-    gem update --system
+    gem install rubygems-update ; update_rubygems ;
     if ((gem query -i bundler -v 1.16.2) -eq $False) {
       gem uninstall bundler -x
       gem install bundler --no-document
