--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ test_script:
 - echo off
 - set PATH=C:/ruby200-x64/bin;%base_path%
 - md C:\Greg\ruby200-x64\lib\ruby\gems\2.0.0\gems\bundler-1.16.2
-- xcopy C:\Greg\ruby_trunk\lib\ruby\gems\2.6.0\gems\bundler-1.16.2           C:\Greg\ruby200-x64\lib\ruby\gems\2.0.0\gems\bundler-1.16.2 /y /s /q 
+- xcopy C:\Greg\ruby_trunk\lib\ruby\gems\2.6.0\gems\bundler-1.16.2           C:\Greg\ruby200-x64\lib\ruby\gems\2.0.0\gems\bundler-1.16.2 /y /s /q /i
 - copy  C:\Greg\ruby_trunk\lib\ruby\gems\2.6.0\specifications\bundler-1.16.2 C:\Greg\ruby200-x64\lib\ruby\gems\2.0.0\\specifications\bundler-1.16.2 /y /s /q
 - gem list
 - ps: >-
