--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,84 +2,4 @@ build: off
 deploy: off
 
 test_script:
-- set base_path=C:/Program Files/7-Zip;C:/Program Files/AppVeyor/BuildAgent;C:/Program Files/Git/cmd;C:/Program Files (x86)/GNU/GnuPG/pub;C:/Windows/system32;C:/Windows
-
-- appveyor DownloadFile https://ci.appveyor.com/api/projects/MSP-Greg/ruby-loco/artifacts/ruby_trunk.7z -FileName C:/ruby_trunk.7z
-- 7z x C:/ruby_trunk.7z -oC:/ruby_trunk
-
-- echo off
-- ruby_version: 200-x64
-- set PATH=C:/ruby200-x64/bin;%base_path%
-- ps: >-
-    if ($env:ruby_version -lt '25') {
-      gem uninstall bundler -x
-      Push-Location C:\
-      gem fetch rubygems-update -v 2.7.7
-      gem unpack  rubygems-update-2.7.7.gem
-      Push-Location C:\rubygems-update-2.7.7
-      ruby setup.rb
-      Pop-Location
-      Pop-Location
-      gem --version
-    }
-
-- ruby_version: 21-x64
-- set PATH=C:/ruby21-x64/bin;%base_path%
-- ps: >-
-    if ($env:ruby_version -lt '25') {
-      gem uninstall bundler -x
-      Push-Location C:\
-      gem fetch rubygems-update -v 2.7.7
-      gem unpack  rubygems-update-2.7.7.gem
-      Push-Location C:\rubygems-update-2.7.7
-      ruby setup.rb
-      Pop-Location
-      Pop-Location
-      gem --version
-    }
-
-- ruby_version: 22-x64
-- set PATH=C:/ruby22-x64/bin;%base_path%
-- ps: >-
-    if ($env:ruby_version -lt '25') {
-      gem uninstall bundler -x
-      Push-Location C:\
-      gem fetch rubygems-update -v 2.7.7
-      gem unpack  rubygems-update-2.7.7.gem
-      Push-Location C:\rubygems-update-2.7.7
-      ruby setup.rb
-      Pop-Location
-      Pop-Location
-      gem --version
-    }
-
-- ruby_version: 23-x64
-- set PATH=C:/ruby23-x64/bin;%base_path%
-- ps: >-
-    if ($env:ruby_version -lt '25') {
-      gem uninstall bundler -x
-      Push-Location C:\
-      gem fetch rubygems-update -v 2.7.7
-      gem unpack  rubygems-update-2.7.7.gem
-      Push-Location C:\rubygems-update-2.7.7
-      ruby setup.rb
-      Pop-Location
-      Pop-Location
-      gem --version
-    }
-    
-- ruby_version: 24-x64
-- set PATH=C:/ruby24-x64/bin;%base_path%
-- ps: >-
-    if ($env:ruby_version -lt '25') {
-      gem uninstall bundler -x
-      Push-Location C:\
-      gem fetch  rubygems-update -v 2.7.7
-      gem unpack rubygems-update-2.7.7.gem
-      Push-Location C:\rubygems-update-2.7.7
-      ruby setup.rb
-      Pop-Location
-      Pop-Location
-      gem --version
-    }
-    
+- ps: .\rubygems_update.ps1
