New System32 files?

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,4 +3,7 @@ build: off
 deploy: off
 
 test_script:
-  - ps: .\trunk_msys2.ps1
+  - ps: (Get-Item -Path 'C:\Windows\System32\libssl-1_1-x64.dll').VersionInfo | Format-List -Force
+(get-item -Path 'C:\Windows\System32\libcrypto-1_1-x64.dll').VersionInfo | Format-List -Force
+  - ps: (Get-Item -Path 'C:\Windows\System32\libcrypto-1_1-x64.dll').VersionInfo | Format-List -Force
+  # - ps: .\trunk_msys2.ps1
