--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,12 @@
 build: off
 deploy: off
 
-environment:
-  matrix:
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+image:
+- Visual Studio 2013
+- Visual Studio 2015
+- Visual Studio 2017
 
 build_script:
   - echo set
   - set
-  - ps: $t = "Env:" ; Write-Host "`nGet-Childitem Env:" ; Get-Childitem $t
+  - ps: ./print_env.ps1
